tests/pass/test-func5.mc
int foo(int a)
{
  return a;
}

int main()
{
  return 0;
}
