tests/fail/fail-global1.mc
int c;
bool b;
void a; /* global variables should not be void */


int main()
{
  return 0;
}
